// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 1`] = `
<div
  className="m-schedule-page__schedule-notes test"
>
  <h3
    className="m-schedule-page__schedule-note-title"
  >
    <div
      className="m-schedule-page__schedule-note-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Schedule Note
  </h3>
  <div
    className="m-schedule-page__schedule-note"
  >
    <h4
      className="m-schedule-page__service"
    >
      Weekdays
    </h4>
    <p
      className="m-schedule-page__service-note-time"
    >
      Trains arrive every 
      5 minutes
    </p>
  </div>
  <div
    className="m-schedule-page__schedule-note"
  >
    <h4
      className="m-schedule-page__service"
    >
      Weekends
    </h4>
    <p
      className="m-schedule-page__service-note-time"
    >
      Trains arrive every 
      8-12 minutes except weekend mornings and late night
    </p>
    <p
      className="m-schedule-page__service-note-time"
    >
      Trains arrive every 
      26 minutes weekend mornings and late night
    </p>
  </div>
  <div
    className="m-schedule-page__note-footer"
  >
    Schedules subject to change
  </div>
</div>
`;

exports[`it renders alternate text if not showing specific times 1`] = `
<div
  className="m-schedule-page__schedule-notes test"
>
  <h3
    className="m-schedule-page__schedule-note-title"
  >
    <div
      className="m-schedule-page__schedule-note-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Schedule Note
  </h3>
  <div
    className="m-schedule-page__schedule-note m-schedule-page__schedule-note--alternate"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<div>Some other information here</div>",
        }
      }
    />
  </div>
</div>
`;

exports[`it renders without service exceptions 1`] = `
<div
  className="m-schedule-page__schedule-notes test"
>
  <h3
    className="m-schedule-page__schedule-note-title"
  >
    <div
      className="m-schedule-page__schedule-note-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Schedule Note
  </h3>
  <div
    className="m-schedule-page__schedule-note"
  >
    <h4
      className="m-schedule-page__service"
    >
      Weekdays
    </h4>
    <p
      className="m-schedule-page__service-note-time"
    >
      Trains arrive every 
      5 minutes
    </p>
  </div>
  <div
    className="m-schedule-page__schedule-note"
  >
    <h4
      className="m-schedule-page__service"
    >
      Weekends
    </h4>
    <p
      className="m-schedule-page__service-note-time"
    >
      Trains arrive every 
      8-12 minutes 
    </p>
  </div>
  <div
    className="m-schedule-page__note-footer"
  >
    Schedules subject to change
  </div>
</div>
`;
